# Aurora

./: .gitattributes  .gitignore  CREDITS.md  README.md  convertToBmp.sh  pyproject.toml  requirements.txt
Wavemaker/: __main__.py
Wavemaker/binder/: Binder.py
Wavemaker/binder/data/: DataLoader.py  DataTypes.py
Wavemaker/binder/prompt/: PromptParser.py  PromptTokenizer.py
Wavemaker/binder/prompt/atoms/: Atom.py  Concatenation.py  Condition.py  Key.py  Operation.py  TokenType.py
Wavemaker/node/: Node.py
Wavemaker/tokenizer/: Token.py  TokenizerTemplate.py
Wavemaker/tools/: Console.py  Mixer.py  Node.py
figma/: Aurora v2.fig  Aurora v3.fig  Aurora.fig
resources/data/colors/: Blossom.toml  Cloud.toml  DMG.toml  Dolphin.toml  Midnight.toml  Moon.toml  XXX.toml
resources/data/resolutions/: 0x0.toml  640x480.toml  720x480.toml  720x720.toml
resources/schemes/: default.ini  global.ini  muxtheme.ini
variants/Blossom/theme/active/scheme/: global.ini
variants/Cloud/theme/active/scheme/: global.ini
variants/DMG/theme/active/scheme/: global.ini
variants/Dolphin/theme/active/scheme/: global.ini
variants/Midnight/theme/active/scheme/: global.ini
variants/Moon/theme/active/scheme/: global.ini
