[project]
name = "aurora-wavemaker"
version = "0.1.0"
description = "A stupid simple generator for Aurora"
requires-python = ">=3.12"
dependencies = [
    "dpath>=2.2.0",
    "loguru>=0.7.3",
    "ruff>=0.11.6",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.poe.tasks]
generate = "python -m Wavemaker"
format = "ruff format"
